--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -16,13 +16,13 @@ body {
   padding: 1em 3em;
   border-radius: 20px;
   width: 100%;
-  max-width: 1330px;
+  max-width: 1300px;
   margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-top: 1em;
-  height: 400px;
+  // height: 400px;
 }
 .main__header__container__text {
   flex: 1;
@@ -46,21 +46,24 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 400px;
 }
 .main__header__container__img__view {
+  width: 100%;
   position: relative;
-  top: 6em;
-  height: 700px;
+  // width: 500px;
+  top: 5em;
   object-fit: contain;
 }
 .main__header__container__text__btn button {
   margin: 1em 0em;
-  padding: 1em 2em;
+  padding: 0.8em 2em;
   border-radius: 10px;
   background-color: transparent;
   border: 1px solid white;
   color: white;
-  font-size: 16px;
+  font-size: 14px;
+  font-weight: 600;
   cursor: pointer;
   transition: 300ms ease-in-out;
 }
@@ -69,9 +72,11 @@ body {
   color: #6554dc;
   background-color: white;
 }
-@media screen and (max-width: 1200px) {
-  .main__header__container__text__heading {
-    font-size: 3opx;
-    width: 100%;
+@media screen and (max-width: 950px) {
+  .main__header__container {
+    flex-direction: column;
+  }
+  .main__header__container__img__view {
+    top: 0em;
   }
 }
