--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -27,12 +27,17 @@
   //   transition: all 300ms ease-in-out;
 }
 .header__nav__container__menu__links__btn {
-  background-color: #f9a826;
-  border: none;
+  border: 1px solid white;
   padding: 0.5rem 1rem;
-  border-radius: 5px;
+  border-radius: 10px;
   color: white;
+  margin-left: 2em;
   font-size: 1rem;
   cursor: pointer;
+  transition: all 300ms ease-in-out;
+}
+.header__nav__container__menu__links__btn:hover {
+  background-color: white;
+  color: #6554dc;
   transition: all 300ms ease-in-out;
 }
