--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -118,7 +118,7 @@ body {
   font-size: 16px;
   line-height: 26px;
   margin-bottom: 1em;
-  font-weight: 300;
+  font-weight: lighter;
   padding-right: 5em;
   width: 100%;
 }
