--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0rem 1rem;
+  padding: 0rem 2rem;
   width: 100%;
   max-width: 1300px;
   //   margin-top: 1em;
@@ -11,7 +11,7 @@
   top: 3.5em;
 }
 .header__nav__container__logo svg {
-  width: 100px;
+  width: 120px;
 }
 .header__nav__container__menu {
   display: flex;
@@ -24,7 +24,10 @@
   font-size: 1rem;
   margin: 0rem 1rem;
   cursor: pointer;
-  //   transition: all 300ms ease-in-out;
+}
+.header__nav__container__menu__links:hover {
+  border-bottom: 2px solid white;
+  transition: all 300ms ease-in-out;
 }
 .header__nav__container__menu__links__btn {
   border: 1px solid white;
@@ -35,9 +38,26 @@
   font-size: 1rem;
   cursor: pointer;
   transition: all 300ms ease-in-out;
+  text-decoration: none;
 }
 .header__nav__container__menu__links__btn:hover {
   background-color: white;
   color: #6554dc;
   transition: all 300ms ease-in-out;
+}
+.header__content__menu {
+  border: none;
+  border-radius: 5px;
+  min-width: 40px;
+  min-height: 40px;
+  padding: 0px;
+  background-color: #ffffff;
+  // display: none;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  cursor: pointer;
+}
+.header__content__menu * {
+  pointer-events: none;
 }
