--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -24,6 +24,7 @@
   font-size: 1rem;
   margin: 0rem 1rem;
   cursor: pointer;
+  border-bottom: 2px solid transparent;
 }
 .header__nav__container__menu__links:hover {
   border-bottom: 2px solid white;
@@ -52,7 +53,7 @@
   min-height: 40px;
   padding: 0px;
   background-color: #ffffff;
-  // display: none;
+  display: none;
   align-items: center;
   justify-content: center;
   padding: 0;
@@ -60,4 +61,41 @@
 }
 .header__content__menu * {
   pointer-events: none;
+}
+@media screen and (max-width: 900px) {
+  .header__content__menu {
+    display: flex;
+  }
+  .header__nav__container__menu {
+    flex-direction: column;
+    position: absolute;
+    margin-top: 20em;
+    background-color: #ffffff;
+    color: #6554dc;
+    border-radius: 10px;
+    right: 0;
+    z-index: 9999;
+  }
+  .header__nav__container__menu__links {
+    // margin: 1em 0;
+    color: #6554dc;
+    padding: 1em 4em;
+    transition: 300ms ease-in-out;
+    border-bottom: 1px solid #f6f6fa;
+  }
+  .header__nav__container__menu__links:hover {
+    color: #6554dc;
+    border-bottom: 1px solid #6554dc;
+    transition: 300ms ease-in-out;
+  }
+  .header__nav__container__menu__links__btn {
+    border: 1px solid #6554dc;
+    color: #6554dc;
+    margin: 1em 0em;
+  }
+  .header__nav__container__menu__links__btn:hover {
+    background-color: #6554dc;
+    color: white;
+    transition: 300ms ease-in-out;
+  }
 }
