--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -52,26 +52,27 @@ body {
   width: 100%;
   position: absolute;
   max-width: 450px;
-  top: 7em;
+  top: 5em;
   object-fit: contain;
 }
 .main__header__container__text__btn button {
   margin: 1em 0em;
-  padding: 0.8em 2em;
+  padding: 0.4em 4em;
   border-radius: 10px;
   background-color: transparent;
   border: 1px solid white;
   color: white;
+  // border: none;
   font-size: 14px;
-  font-weight: 600;
+  font-weight: 500;
   cursor: pointer;
   transition: 300ms ease-in-out;
 }
-.main__header__container__text__btn button:hover {
-  transition: 300ms ease-in-out;
-  color: #6554dc;
-  background-color: white;
-}
+// .main__header__container__text__btn button:hover {
+//   transition: 300ms ease-in-out;
+//   color: #6554dc;
+//   background-color: white;
+// }
 .about__contaner {
   width: 100%;
   display: flex;
@@ -92,18 +93,26 @@ body {
 }
 .about__contaner__overlay {
   // background-image: url("../assets/aboutball.png");
-
   position: absolute;
   background-repeat: no-repeat;
   top: 0;
   right: 0;
   z-index: -1;
 }
-.about__contaner__overlay img {
+.about__contaner__overlay__img {
   border-radius: 300px;
-  // background-color: transparent;
   height: 400px;
   width: 400px;
+  object-fit: contain;
+  animation: spin 10s linear infinite;
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 .about__contaner__text__heading {
   font-size: 40px;
@@ -145,28 +154,58 @@ body {
 }
 .services__container__card {
   position: relative;
-  width: 250px;
-  // margin: 0em 1em;
-  margin-right: 1em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  transition: 300ms ease-in-out;
+  border: 1px solid white;
+  border-radius: 10px;
+  padding: 2em 0em;
+}
+.services__container__card:hover {
+  transition: 300ms ease-in-out;
+  cursor: pointer;
+  background-color: #6554dc;
+  border: 1px solid #6554dc;
 }
 .services__container__card__img {
-  width: 100%;
-  // padding: 1em;
+  padding-bottom: 3.5em;
 }
 .services__container__card__img img {
-  height: 350px;
-  // width: 300px;
+  width: 180px;
+  transition: 300ms ease-in-out;
+}
+.services__container__card__img img:hover {
+  transform: scale(1.1);
+  transition: 300ms ease-in-out;
 }
 .services__container__card__text {
   position: absolute;
+  width: 230px;
   bottom: 0em;
-  padding: 0.5em;
-  font-size: 30px;
-  color: rgb(0, 0, 0);
+  padding: 0.8em 0em;
+  font-size: 28px;
+  color: #d9d9d9;
   font-weight: 900;
+  line-height: 30px;
 }
 .swiper-pagination-bullet {
   background-color: rgb(0, 0, 0);
+}
+// .grid__container {
+// }
+.grid__container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: minmax(100px, auto);
+  gap: 10px;
+}
+
+.grid__item {
+  border: 1px solid #ddd;
+  padding: 20px;
+  text-align: center;
 }
 @media screen and (max-width: 1130px) {
   .main__header__container__text__heading {
@@ -224,4 +263,63 @@ body {
   .main__header__container__text__heading__overlay svg {
     width: 330px;
   }
+}
+.button {
+  all: unset;
+  display: flex;
+  align-items: center;
+  position: relative;
+  padding: 0.3em 2em;
+  border: none;
+  border-radius: 0.25em;
+  cursor: pointer;
+  overflow: hidden;
+  transition: border 300ms, color 300ms;
+  user-select: none;
+}
+
+.button p {
+  z-index: 1;
+}
+
+.button:hover {
+  color: #ffffff;
+}
+
+.button:active {
+  border-color: teal;
+}
+
+.button::after,
+.button::before {
+  content: "";
+  position: absolute;
+  width: 10em;
+  aspect-ratio: 1;
+  background: #4a32e7;
+  opacity: 50%;
+  border-radius: 50%;
+  transition: transform 500ms, opacity 500ms;
+}
+
+.button::before {
+  left: 0;
+  transform: translateX(-8em);
+}
+
+.button::after {
+  right: 0;
+  transform: translateX(8em);
+}
+
+.button:hover:before {
+  transform: translateX(-1em);
+}
+
+.button:hover:after {
+  transform: translateX(1em);
+}
+.button:active:before,
+.button:active:after {
+  background: #5c4acb;
 }
