--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,9 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Jost:wght@100;300;400;500;600&display=swap");
 *,
 *::after,
 *::before {
   box-sizing: border-box;
   scroll-behavior: smooth;
-  font-family: sans-serif;
+  font-family: "Jost", sans-serif;
+  // font-family: Akira;
+}
+@font-face {
+  font-family: Akira;
+  src: url(../fonts/Akira.otf);
 }
 body {
   margin: 0;
@@ -36,6 +42,7 @@ body {
   font-weight: 900;
   color: white;
   line-height: 50px;
+  font-family: Akira;
 }
 .main__header__container__text__heading__overlay {
   margin: 1em 0em;
@@ -119,6 +126,7 @@ body {
   font-weight: 900;
   line-height: 50px;
   margin-bottom: 0.4em;
+  font-family: Akira;
 }
 .about__contaner__text__heading span {
   margin-left: 0.3em;
@@ -127,7 +135,7 @@ body {
   font-size: 16px;
   line-height: 26px;
   margin-bottom: 1em;
-  font-weight: lighter;
+  font-weight: 400;
   padding-right: 5em;
   width: 100%;
 }
@@ -144,6 +152,7 @@ body {
   margin-bottom: 0.4em;
   color: white;
   width: 20px;
+  font-family: Akira;
 }
 .services__container__card__wraper {
   display: flex;
@@ -185,10 +194,11 @@ body {
   width: 230px;
   bottom: 0em;
   padding: 0.8em 0em;
-  font-size: 28px;
+  font-size: 22px;
   color: #d9d9d9;
   font-weight: 900;
-  line-height: 30px;
+  line-height: 25px;
+  font-family: Akira;
 }
 .swiper-pagination-bullet {
   background-color: rgb(0, 0, 0);
