--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -166,7 +166,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  width: 300px;
   transition: 300ms ease-in-out;
   border: 1px solid white;
   border-radius: 10px;
