--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -2,16 +2,16 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0rem 2rem;
+  // padding: 0em 2.9em;
   width: 100%;
   max-width: 1300px;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  top: 0.5em;
+  top: 1.5em;
 }
 .header__nav__container__logo svg {
-  width: 120px;
+  width: 150px;
 }
 .header__nav__container__menu {
   display: flex;
@@ -22,12 +22,15 @@
   color: white;
   text-decoration: none;
   font-size: 1rem;
-  margin: 0rem 1rem;
+  margin: 0rem 0.5rem;
   cursor: pointer;
-  border-bottom: 2px solid transparent;
+  border-radius: 10px;
+  padding: 0.5rem 1rem;
+  font-weight: 600;
 }
 .header__nav__container__menu__links:hover {
-  border-bottom: 2px solid white;
+  background-color: #ffffff4f;
+  font-weight: 600;
   transition: all 300ms ease-in-out;
 }
 .header__nav__container__menu__links__btn {
@@ -69,23 +72,23 @@
   .header__nav__container__menu {
     flex-direction: column;
     position: absolute;
-    margin-top: 20em;
-    background-color: #ffffff;
+    margin-top: 22em;
+    background-color: #141414;
     color: #6554dc;
     border-radius: 10px;
-    right: 0;
+    right: 10px;
     z-index: 9999;
   }
   .header__nav__container__menu__links {
     // margin: 1em 0;
     color: #6554dc;
-    padding: 1em 4em;
+    padding: 0.6em 4em;
+    margin: 0.3em;
     transition: 300ms ease-in-out;
-    border-bottom: 1px solid #f6f6fa;
   }
   .header__nav__container__menu__links:hover {
-    color: #6554dc;
-    border-bottom: 1px solid #6554dc;
+    color: #f4f4f7;
+    background-color: #ffffff50;
     transition: 300ms ease-in-out;
   }
   .header__nav__container__menu__links__btn {
@@ -97,5 +100,10 @@
     background-color: #6554dc;
     color: white;
     transition: 300ms ease-in-out;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .header__nav__container {
+    padding: 0em 3em;
   }
 }
