--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  // padding: 0em 2.9em;
+  padding: 0rem 2rem;
   width: 100%;
   max-width: 1300px;
   position: absolute;
@@ -66,6 +66,9 @@
   pointer-events: none;
 }
 @media screen and (max-width: 900px) {
+  .header__nav__container {
+    padding: 0rem 3rem;
+  }
   .header__content__menu {
     display: flex;
   }
@@ -102,8 +105,8 @@
     transition: 300ms ease-in-out;
   }
 }
-@media screen and (max-width: 1200px) {
-  .header__nav__container {
-    padding: 0em 3em;
-  }
-}
+// @media screen and (max-width: 1200px) {
+//   .header__nav__container {
+//     padding: 0em 0em;
+//   }
+// }
