--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -126,11 +126,11 @@
   overflow: hidden;
 }
 
-button:hover {
+.btn:hover {
   color: black;
 }
 
-button:after {
+.btn:after {
   content: "";
   background: white;
   position: absolute;
@@ -143,7 +143,7 @@ button:after {
   transition: all 0.5s;
 }
 
-button:hover:after {
+.btn:hover:after {
   transform: skewX(-45deg) scale(1, 1);
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
