--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -198,7 +198,7 @@ body {
   transition: 300ms ease-in-out;
   background-color: rgba(0, 0, 0, 0.295);
   border-radius: 30px;
-  padding: 2em 1em;
+  padding: 3em 1em;
 }
 .services__container__card:hover {
   transition: 300ms ease-in-out;
@@ -302,10 +302,7 @@ body {
   // .main__header__container__imgs {
   //   width: 100%;
   // }
-  .main__header__container__img__view {
-    width: 100%;
-    object-fit: cover;
-  }
+
   .about__contaner {
     margin-top: 20em;
   }
@@ -320,8 +317,13 @@ body {
 }
 
 @media (max-width: 700px) {
-  .services__container__main__wraper {
-    // flex-direction: column;
+  .sevrive__svg {
+    margin-bottom: 0.5em;
+  }
+  .main__header__container__imgs {
+    width: 100%;
+    align-items: center;
+    justify-content: center;
   }
   .about__contaner {
     padding: 0 2em;
@@ -333,7 +335,8 @@ body {
     line-height: 40px;
   }
   .main__header__container__img__view {
-    width: 300px;
+    // width: 100%;
+    // max-width: 300px;
     top: 20em;
   }
   .main__header__container__text__heading {
@@ -347,6 +350,9 @@ body {
   }
 }
 @media (max-width: 600px) {
+  .services__container__main {
+    margin-top: 6em;
+  }
 }
 button {
   position: relative;
