--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -12,10 +12,15 @@
   z-index: 9999;
   padding: 0 4em;
   position: fixed;
-  // display: none;
+  transition: 300ms ease-in-out;
 }
 .nav__bar__wraper__active {
-  background-color: #ff0b0bc7;
+  background-color: rgba(101, 84, 220, 1);
+  top: 0;
+  padding: 0.5em 4em;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  transition: 300ms ease-in-out;
 }
 .header__nav__container__logo svg {
   width: 150px;
@@ -24,11 +29,25 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  animation: dropdown__list__nav__animation 500ms both;
+  transform-origin: right;
 }
 .active {
   background-color: #ffffff4f;
   font-weight: 600;
   transition: all 300ms ease-in-out;
+}
+@keyframes dropdown__list__nav__animation {
+  from {
+    opacity: 0;
+    top: 2em;
+    transform: scaleY(0.9);
+  }
+  to {
+    opacity: 1;
+    top: 4em;
+    transform: scaleY(1);
+  }
 }
 .header__nav__container__menu__links {
   color: white;
@@ -77,7 +96,7 @@
 .header__content__menu * {
   pointer-events: none;
 }
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 950px) {
   .header__nav__container {
     padding: 0rem 3rem;
   }
@@ -87,12 +106,13 @@
   .header__nav__container__menu {
     flex-direction: column;
     position: absolute;
-    margin-top: 22em;
+    margin-top: 0em;
     background-color: #141414;
     color: #6554dc;
     border-radius: 10px;
     right: 10px;
     z-index: 9999;
+    width: 100%;
   }
   .header__nav__container__menu__links {
     // margin: 1em 0;
