--- a/src/styles/contactus.scss
+++ b/src/styles/contactus.scss
@@ -52,14 +52,17 @@
   max-width: 1366px;
   margin: 0 auto;
   padding: 2em 4em;
+  flex-wrap: wrap;
+  gap: 1em;
 }
 .contact__card__row__wraper__col__left {
-  width: 40%;
+  width: 48%;
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
   border-radius: 39px;
   background: #232323;
+  padding: 1.5em 2em;
 }
 .contact__card__row__wraper__col__form {
   width: 100%;
@@ -83,8 +86,8 @@
   font-weight: bolder;
 }
 .contact__card__col__form__sub__heading {
-  font-size: 0.6rem;
-  font-weight: 600;
+  font-size: 1rem;
+  margin-top: 6px;
 }
 .contact__card__row__wraper__col__form__input {
   width: 100%;
@@ -120,6 +123,72 @@
 }
 .contact__card__row__wraper__col__form__btn__text {
   z-index: 1;
+  transition: 300ms ease-in-out;
+  border-radius: 20px;
+}
+.contact__card__row__wraper__col__form__btn__text:hover {
+  cursor: pointer;
+  color: rgb(137, 120, 248);
+  transition: 300ms ease-in-out;
+}
+.contact__card__row__wraper__col__form__btn__text:hover
+  .contact__card__row__wraper__col__form__btn__svg {
+  transition: 300ms ease-in-out;
+  transform: translateX(10px);
+  right: 0em;
+}
+
+.contact__card__row__wraper__col__right {
+  width: 50%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  color: white;
+  padding: 3em 2em;
+  border: 1px solid #787878;
+  border-radius: 20px;
+}
+.contact__card__col__right__title {
+  font-size: 1rem;
+}
+.contact__card__col__right__heading {
+  font-size: 40px;
+  line-height: 50px;
+  font-weight: bolder;
+  width: 100%;
+  max-width: 600px;
+  padding: 0.5em 0;
+}
+.contact__card__col__right__subheading {
+  margin: 0.5em 0em;
+  width: 100%;
+  max-width: 400px;
+}
+.contact__card__col__right__subheading {
+  font-size: 20px;
+}
+.contact__card__col__right__line {
+  width: 100%;
+  height: 1px;
+  background-color: #787878;
+  margin: 1em 0;
+}
+.contact__card__col__right__address {
+  display: flex;
+  margin: 0.8em 0em;
+  margin-bottom: 1em;
+}
+.contact__card__col__right__address__svg {
+  margin-right: 1em;
+}
+@media (max-width: 1250px) {
+  .contact__card__row__wraper__col__left {
+    width: 100%;
+  }
+  .contact__card__row__wraper__col__right {
+    width: 100%;
+  }
 }
 @media (max-width: 900px) {
   .contact__main__container__header__over {
@@ -127,6 +196,16 @@
   }
 }
 @media (max-width: 800px) {
+  .contact__card__col__form__heading {
+    font-size: 1.5rem;
+  }
+  .contact__card__col__right__heading {
+    font-size: 30px;
+    line-height: 40px;
+  }
+  .contact__card__col__right__subheading {
+    font-size: 16px;
+  }
   .contact__mian__container__text__heading {
     font-size: 30px;
   }
@@ -135,6 +214,16 @@
   }
 }
 @media (max-width: 600px) {
+  .contact__card__row__wraper {
+    padding: 2em;
+  }
+  .contact__card__row__wraper__col__form {
+    padding: 0em;
+  }
+  .contact__card__col__right__heading {
+    font-size: 25px;
+    line-height: 30px;
+  }
   .contact__mian__container__text__heading {
     font-size: 20px;
   }
