--- a/src/styles/aboutus.scss
+++ b/src/styles/aboutus.scss
@@ -61,6 +61,117 @@
   line-height: 23px;
   transition: 300ms ease-in-out;
 }
+.pricing__main__container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 1366px;
+  margin: 0 auto;
+  flex-wrap: wrap;
+  padding: 0em 4em;
+  margin-bottom: 4em;
+}
+.pricing__main__container__card__wraper__over {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1em;
+  min-width: 320px;
+  flex-wrap: wrap;
+}
+.pricing__main__container__card__wraper {
+  width: 30%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  background-color: #232323;
+  padding: 2em;
+  transition: 300ms ease-in-out;
+  border: 2px solid transparent;
+  margin-top: 3em;
+  min-width: 320px;
+}
+.pricing__main__container__content {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: white;
+}
+.pricing__main__container__content__heading {
+  font-size: 2.5rem;
+  margin: 0.5em 0;
+  font-weight: 500;
+}
+.pricing__main__container__content__subheading {
+  font-size: 1rem;
+  max-width: 600px;
+  text-align: center;
+  font-weight: 400;
+  color: #a1a1aa;
+}
+.pricing__main__container__card__wraper:hover {
+  border-radius: 6px;
+  border: 2px solid var(--gradient-01, #6ddcff);
+
+  background: #18181b;
+  transition: 300ms ease-in-out;
+}
+.pricing__main__container__card__title {
+  font-size: 14px;
+  font-weight: 800;
+}
+.pricing__main__container__card__price__wrap {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-start;
+  margin: 0.5em 0;
+}
+.pricing__main__container__card__price {
+  font-size: 2.5rem;
+  font-weight: 500;
+  color: white;
+}
+.pricing__main__container__card__price__month {
+  font-size: 14px;
+  color: #71717a;
+}
+.pricing__main__container__card__title {
+  font-size: 1rem;
+  font-weight: 400;
+  margin-bottom: 1em;
+  color: #71717a;
+}
+.pricing__main__container__card__line {
+  width: 100%;
+  height: 1px;
+  padding: 0 2em;
+  background-color: #27272a;
+  margin-bottom: 1em;
+}
+.pricing__main__container__card__entry__wraper {
+  display: flex;
+  align-items: flex-start;
+  width: 100%;
+  justify-content: flex-start;
+  margin: 0.5em 0;
+}
+.pricing__main__container__card__entry__wraper:nth-child(1) {
+  align-items: center;
+  background-color: rebeccapurple;
+}
+.pricing__main__container__card__entry__text {
+  font-weight: 500;
+  margin-left: 0.5em;
+  color: #ffffff;
+}
+.pricing__main__container__card__entry__info_icon {
+  margin-left: 0.5em;
+}
 @media (max-width: 1050px) {
   .provide__main__container__card__wraper {
     // width: 100%;
@@ -86,6 +197,12 @@
   }
 }
 @media (max-width: 800px) {
+  .pricing__main__container__card__wraper {
+    width: 100%;
+  }
+  .pricing__main__container {
+    padding: 0em 2em;
+  }
   .provide__main__container__wraper__heading {
     font-size: 2rem;
   }
