--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -106,13 +106,14 @@
   .header__nav__container__menu {
     flex-direction: column;
     position: absolute;
-    margin-top: 0em;
+    margin-top: -4em;
     background-color: #141414;
     color: #6554dc;
     border-radius: 10px;
     right: 10px;
     z-index: 9999;
     width: 100%;
+    padding: 2em 0;
   }
   .header__nav__container__menu__links {
     // margin: 1em 0;
@@ -127,12 +128,13 @@
     transition: 300ms ease-in-out;
   }
   .header__nav__container__menu__links__btn {
-    border: 1px solid #6554dc;
-    color: #6554dc;
+    border: 1px solid #ffffff;
+    color: #ffffff;
     margin: 1em 0em;
   }
   .header__nav__container__menu__links__btn:hover {
     background-color: #6554dc;
+    border: 1px solid #6554dc;
     color: white;
     transition: 300ms ease-in-out;
   }
@@ -149,11 +151,7 @@
   //   top: 1em;
   // }
 }
-// @media screen and (max-width: 1200px) {
-//   .header__nav__container {
-//     padding: 0em 0em;
-//   }
-// }
+
 .btn {
   width: 6.5em;
   height: 2.3em;
