--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -2,7 +2,7 @@
   background-color: black;
   border-top-left-radius: 60px;
   border-top-right-radius: 60px;
-  padding: 4em;
+  padding: 2em 4em;
 }
 .footer__main__container {
   width: 100%;
@@ -20,7 +20,7 @@
   align-items: flex-start;
   justify-content: flex-start;
   flex-direction: column;
-  padding: 2em 0em;
+  padding-bottom: 2em;
 }
 .footer__testim__wrapaer__text {
   width: 100%;
