--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -142,7 +142,6 @@ body {
 }
 .about__contaner__text__sub__heading {
   line-height: 24px;
-  // margin: 1em 0em;
   font-weight: 300;
   width: 100%;
   max-width: 950px;
@@ -152,7 +151,7 @@ body {
   width: 100%;
   max-width: 1366px;
   margin: 0 auto;
-  padding: 0em 4em;
+  padding: 2em 4em;
   margin-top: 12em;
 }
 .services__container__main__wraper {
@@ -477,7 +476,7 @@ button:hover .button-text {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #a57e57;
+  background-color: rgb(101, 84, 220);
   z-index: 9999999999;
 }
 @keyframes popupContainer {
