--- a/src/components/Projects/style.module.scss
+++ b/src/components/Projects/style.module.scss
@@ -1,20 +1,17 @@
 .headingfixed {
-  background-color: #f5f5f5;
+  background-color: #232323;
   padding-top: 2em;
 }
 .projects {
   display: flex;
   align-items: center;
-  padding-left: 200px;
-  padding-right: 200px;
+  padding: 0em 4em;
   flex-direction: column;
   margin-top: 100px;
   height: 730px;
   overflow: auto;
   margin-bottom: 2em;
-  background-color: #f5f5f5;
-  padding-top: 4em;
-  padding-bottom: 4em;
+  background-color: #232323;
 
   .body {
     max-width: 1400px;
@@ -231,4 +228,38 @@
       background-color: transparent;
     }
   }
+}
+.upper__text__wraper {
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  justify-content: space-between;
+  margin-bottom: 2em;
+  flex-direction: column;
+  max-width: 1366px;
+  margin: 0 auto;
+}
+.upper__text__wraper__text {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding-top: 3em;
+}
+.upper__text__wraper__heading {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: normal;
+  background: linear-gradient(90deg, #1dbef5 0%, #5846c7 96.15%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.upper__text__wraper__sub__heading {
+  font-size: 55px;
+  font-weight: bolder;
+  line-height: 1.5;
+  color: white;
+  width: 100%;
+  max-width: 600px;
 }
