--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -308,8 +308,9 @@ body {
   }
   .about__contaner__text__sub__heading {
     padding: 0em;
-    font-size: 18px;
+    font-size: 16px;
     width: 100%;
+    margin-top: 0.5em;
   }
   .main__header__container__text__heading {
     font-size: 30px;
